# CaribouSlicer

./: .gitignore  .~lock.SlicerLibraries.xlsx#  BuildLinux.sh  BuildmacOS.sh  CMakeLists.txt  README.md  SlicerLibraries.xlsx  buildlog  buildlog2  version.inc
.github/: CONTRIBUTING.md
.github/workflows/: manual-macOS-x86_64.yml  manual_linux-x64-GTK2.yml  manual_linux-x64-GTK3.yml
cmake/: CPackConfig.cmake
cmake/modules/: FindNLopt.cmake
doc/: How to build - Linux et al.md  How to build - Mac OS.md  How to build - Windows.md
resources/calibration/: de_introduction.html  introduction.html
resources/localization/: PrusaSlicer.pot  Slic3r.pot  list.txt  pom_merger.py  settings.ini  update_all.py  update_be.py  update_de.py  update_fi.py  update_zh_TW.py
resources/profiles/: Anycubic.idx  Anycubic.ini  Artillery.idx  Artillery.ini  BIBO.idx  BIBO.ini  BIQU.idx  BIQU.ini  Basic.ini  CR3D.idx  CR3D.ini  Caribou.idx  Caribou.ini  Creality.idx  Creality.ini  Elegoo.idx  Elegoo.ini  FLSun.idx  FLSun.ini  INAT.idx  INAT.ini  Jubilee.idx  Jubilee.ini  LulzBot.idx  LulzBot.ini  MakerGear.idx  MakerGear.ini  Meltingplot.idx  Meltingplot.ini  PrusaResearch.idx  PrusaResearch.ini  RatRig.idx  RatRig.ini  Snapmaker.idx  Snapmaker.ini  TriLAB.idx  TriLAB.ini  Ultimaker.idx  Ultimaker.ini  Vertex.idx  (+7 more)
resources/shaders/: gouraud.fs  gouraud.vs  printbed.vs
resources/ui_layout/: Readme.md
src/: CMakeLists.txt  CaribouSlicer.cpp
src/boost/: CMakeLists.txt
src/boost/nowide/: version
src/qoi/: README.md  (+1 more)
t/: cooling.t  thin.t
tests/: CMakeLists.txt
xs/: main.xs.in
(+450 files in other folders)
